Fix for PDF find-in-page bug.

The problem was that the internal find identifier in PepperPluginInstanceImpl was not being updated when selectFindResult() was called, which resulted in the incorrect find request ID being reported in the find reply.

BUG=621304

Review-Url: https://codereview.chromium.org/2082733002
Cr-Commit-Position: refs/heads/master@{#401374}

Former-commit-id: e39a61d57a81807380a1d6817840d7452760e5f9