content/renderer/pepper/pepper_webplugin_impl.h
@@ -70,7 +70,7 @@ class PepperWebPluginImpl : public blink::WebPlugin {
   bool startFind(const blink::WebString& search_text,
                  bool case_sensitive,
                  int identifier) override;
-  void selectFindResult(bool forward) override;
+  void selectFindResult(bool forward, int identifier) override;
   void stopFind() override;
   bool supportsPaginatedPrint() override;
   bool isPrintScalingDisabled() override;
